@@ -14,26 +14,34 @@
  */
 package com.hemajoo.commerce.cherry.backend.rest.controller.person;
 
+import com.hemajoo.commerce.cherry.backend.commons.type.EntityType;
+import com.hemajoo.commerce.cherry.backend.persistence.base.entity.EntityFactory;
+import com.hemajoo.commerce.cherry.backend.persistence.base.entity.ServerEntity;
 import com.hemajoo.commerce.cherry.backend.persistence.base.entity.ServiceFactoryPerson;
 import com.hemajoo.commerce.cherry.backend.persistence.person.converter.EmailAddressConverter;
-import com.hemajoo.commerce.cherry.backend.persistence.person.entity.ServerEmailAddressEntity;
-import com.hemajoo.commerce.cherry.backend.persistence.person.entity.ServerPersonEntity;
+import com.hemajoo.commerce.cherry.backend.persistence.person.entity.EmailAddressServer;
 import com.hemajoo.commerce.cherry.backend.persistence.person.randomizer.EmailAddressRandomizer;
-import com.hemajoo.commerce.cherry.backend.persistence.person.service.EmailAddressServiceCore;
+import com.hemajoo.commerce.cherry.backend.persistence.person.service.EmailAddressService;
 import com.hemajoo.commerce.cherry.backend.persistence.person.validation.constraint.ValidEmailAddressForCreation;
 import com.hemajoo.commerce.cherry.backend.persistence.person.validation.constraint.ValidEmailAddressForUpdate;
 import com.hemajoo.commerce.cherry.backend.persistence.person.validation.constraint.ValidEmailAddressId;
-import com.hemajoo.commerce.cherry.backend.persistence.person.validation.constraint.ValidPersonId;
 import com.hemajoo.commerce.cherry.backend.persistence.person.validation.engine.EmailAddressValidationEngine;
 import com.hemajoo.commerce.cherry.backend.persistence.person.validation.validator.EmailAddressValidatorForUpdate;
 import com.hemajoo.commerce.cherry.backend.shared.base.converter.GenericEntityConverter;
 import com.hemajoo.commerce.cherry.backend.shared.base.entity.EntityException;
-import com.hemajoo.commerce.cherry.backend.shared.person.address.ClientEmailAddressEntity;
-import com.hemajoo.commerce.cherry.backend.shared.person.address.EmailAddressException;
-import com.hemajoo.commerce.cherry.backend.shared.person.address.SearchEmailAddress;
-import io.swagger.annotations.*;
+import com.hemajoo.commerce.cherry.backend.shared.base.query.condition.QueryConditionException;
+import com.hemajoo.commerce.cherry.backend.shared.document.exception.DocumentException;
+import com.hemajoo.commerce.cherry.backend.shared.person.address.email.EmailAddressClient;
+import com.hemajoo.commerce.cherry.backend.shared.person.address.email.EmailAddressException;
+import com.hemajoo.commerce.cherry.backend.shared.person.address.email.EmailAddressQuery;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.ComponentScan;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -43,15 +51,14 @@ import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * REST controller providing service endpoints to manage the email addresses.
  * @author <a href="mailto:christophe.resse@gmail.com">Christophe Resse</a>
  * @version 1.0.0
  */
-@Api(tags = "Email Addresses")
-@ComponentScan(basePackageClasses = { EmailAddressValidatorForUpdate.class, EmailAddressServiceCore.class })
+@Tag(name = "Email Address REST controller", description = "Set of REST-API endpoints to manage the email address entities.")
+@ComponentScan(basePackageClasses = { EmailAddressValidatorForUpdate.class, EmailAddressService.class })
 //@GroupSequence( { EmailAddressController.class, BasicValidation.class, ExtendedValidation.class } )
 @Validated
 @RestController
@@ -76,11 +83,14 @@ public class EmailAddressController
     @Autowired
     private EmailAddressValidationEngine validationEmailAddress;
 
+    @Autowired
+    private EntityFactory factory;
+
     /**
      * Service to count the number of email addresses.
      * @return Number of email addresses.
      */
-    @ApiOperation(value = "Count email addresses")
+    @Operation(summary = "Count email addresses")
     @GetMapping("/count")
     public long count()
     {
@@ -92,15 +102,21 @@ public class EmailAddressController
      * @param id Email address identifier.
      * @return Email address matching the given identifier.
      */
-    @ApiOperation(value = "Retrieve an email address")
+    @Operation(summary = "Retrieve an email address")
     @GetMapping("/get/{id}")
-    public ResponseEntity<ClientEmailAddressEntity> get(
-            @ApiParam(value = "Email address identifier", required = true)
-            @Valid @ValidEmailAddressId // Handles email id validation automatically, need both annotations!
+    public ResponseEntity<EmailAddressClient> get(
+            @Parameter(description = "Email address identifier", required = true)
+            /*@Valid @ValidEmailAddressId*/ // Handles email id validation automatically, need both annotations!
             @NotNull
-            @PathVariable String id)
+            @PathVariable String id) throws DocumentException
     {
-        ServerEmailAddressEntity serverEmailAddress = servicePerson.getEmailAddressService().findById(UUID.fromString(id));
+        EmailAddressServer serverEmailAddress = servicePerson.getEmailAddressService().findById(UUID.fromString(id));
+
+        if (serverEmailAddress == null)
+        {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+
         return ResponseEntity.ok(converterEmailAddress.fromServerToClient(serverEmailAddress));
     }
 
@@ -108,15 +124,15 @@ public class EmailAddressController
      * Service to add a new email address.
      * @param emailAddress Email address.
      * @return Newly created email address.
-     * @throws EmailAddressException Thrown to indicate an error occurred while trying to create the email address.
+     * @throws EmailAddressException Thrown to indicate an error occurred while trying to create an email address.
      */
-    @ApiOperation(value = "Create a new email address")
+    @Operation(summary = "Create a new email address")
     @PostMapping("/create")
-    public ResponseEntity<ClientEmailAddressEntity> create(
-            @ApiParam(value = "Email address", required = true)
-            @Valid @ValidEmailAddressForCreation @RequestBody ClientEmailAddressEntity emailAddress) throws EntityException, EmailAddressException
+    public ResponseEntity<EmailAddressClient> create(
+            @Parameter(description = "Email address", required = true)
+            @Valid @ValidEmailAddressForCreation @RequestBody EmailAddressClient emailAddress) throws EmailAddressException
     {
-        ServerEmailAddressEntity serverEmailAddress = converterEmailAddress.fromClientToServer(emailAddress);
+        EmailAddressServer serverEmailAddress = converterEmailAddress.fromClientToServer(emailAddress);
         serverEmailAddress = servicePerson.getEmailAddressService().save(serverEmailAddress);
 
         return ResponseEntity.ok(converterEmailAddress.fromServerToClient(serverEmailAddress));
@@ -124,20 +140,23 @@ public class EmailAddressController
 
     /**
      * Service to create a random email address.
-     * @param personId Person identifier being the owner of the email address to create.
+     * @param parentId Entity identifier being the owner of the email address to create.
+     * @param parentType Entity type being the owner of the email address to create.
      * @return Randomly generated email address.
      * @throws EmailAddressException Thrown to indicate an error occurred while trying to create a random email address.
      */
-    @ApiOperation(value = "Create a new random email address")
+    @Operation(summary = "Create a new random email address")
     @PostMapping("/random")
-    public ResponseEntity<ClientEmailAddressEntity> random(
-            @ApiParam(value = "Person identifier (UUID) being the owner of the new random email address", name = "personId", required = true)
-            @Valid @ValidPersonId @NotNull @RequestParam String personId) throws EmailAddressException
+    public ResponseEntity<EmailAddressClient> random(
+            @Parameter(description = "Parent entity type", name = "parentType", required = true)
+            @NotNull @RequestParam EntityType parentType,
+            @Parameter(description = "Entity identifier (UUID) being the owner of the new random email address", name = "parentId", required = true)
+            /*@Valid @ValidPersonId*/ @NotNull @RequestParam String parentId) throws EntityException
     {
-        ServerEmailAddressEntity serverEmail = EmailAddressRandomizer.generateServerEntity(false);
+        EmailAddressServer serverEmail = EmailAddressRandomizer.generateServerEntity(false);
 
-        ServerPersonEntity person = servicePerson.getPersonService().findById(UUID.fromString(personId));
-        serverEmail.setPerson(person);
+        ServerEntity parent = (ServerEntity) factory.from(parentType, UUID.fromString(parentId));
+        serverEmail.setParent(parent);
         serverEmail = servicePerson.getEmailAddressService().save(serverEmail);
 
         return ResponseEntity.ok(converterEmailAddress.fromServerToClient(serverEmail));
@@ -147,19 +166,19 @@ public class EmailAddressController
      * Service to update an email address.
      * @param email Email address to update.
      * @return Updated email address.
+     * @throws EntityException Thrown to indicate an error occurred while trying to update an email address.
      */
-    @ApiOperation(value = "Update an email address"/*, notes = "Update an email address given the new values."*/)
+    @Operation(summary = "Update an email address"/*, notes = "Update an email address given the new values."*/)
     @PutMapping("/update")
     //@Transactional
-    public ResponseEntity<ClientEmailAddressEntity> update(
-            @NotNull @Valid @ValidEmailAddressForUpdate @RequestBody ClientEmailAddressEntity email) throws EntityException, EmailAddressException
+    public ResponseEntity<EmailAddressClient> update(
+            @NotNull @Valid @ValidEmailAddressForUpdate @RequestBody EmailAddressClient email) throws EntityException
     {
-        //emailAddressRuleEngine.validateEmailAddressId(email);
         validationEmailAddress.validateEmailForUpdate(email);
 
-        ServerEmailAddressEntity source = converterEmailAddress.fromClientToServer(email);
-        ServerEmailAddressEntity updated = servicePerson.getEmailAddressService().update(source);
-        ClientEmailAddressEntity client = converterEmailAddress.fromServerToClient(updated);
+        EmailAddressServer source = converterEmailAddress.fromClientToServer(email);
+        EmailAddressServer updated = servicePerson.getEmailAddressService().update(source);
+        EmailAddressClient client = converterEmailAddress.fromServerToClient(updated);
 
         return ResponseEntity.ok(client);
     }
@@ -169,10 +188,10 @@ public class EmailAddressController
      * @param id Email address identifier.
      * @return Confirmation message.
      */
-    @ApiOperation(value = "Delete an email address")
+    @Operation(summary = "Delete an email address")
     @DeleteMapping("/delete/{id}")
     public ResponseEntity<String> delete(
-            @ApiParam(value = "Email address identifier (UUID)", required = true)
+            @Parameter(description = "Email address identifier (UUID)", required = true)
             @NotNull @Valid @ValidEmailAddressId @PathVariable String id)
     {
         servicePerson.getEmailAddressService().deleteById(UUID.fromString(id));
@@ -186,21 +205,21 @@ public class EmailAddressController
      * @return List of matching email addresses.
      * @throws EmailAddressException Thrown to indicate an error occurred while trying to search for email addresses.
      */
-    @ApiOperation(value = "Search for email addresses", notes = "Search for email addresses matching the given predicates. Fill only the fields to be taken into account.")
+    @Operation(summary = "Search for email addresses", description = "Search for email addresses matching the given predicates. Fill only the fields to be taken into account.")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful operation"),
-            @ApiResponse(code = 404, message = "No email address found matching the given criteria"),
-            @ApiResponse(code = 400, message = "Missing or invalid request"),
-            @ApiResponse(code = 500, message = "Internal server error")})
+            @ApiResponse(responseCode = "200", description = "Successful operation"),
+            @ApiResponse(responseCode = "404", description = "No email address found matching the given criteria"),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid request"),
+            @ApiResponse(responseCode = "500", description = "Internal server error")})
     @PatchMapping(value = "/search", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE) // PATCH method Because a GET method cannot have a request body!
-    public ResponseEntity<List<ClientEmailAddressEntity>> search(final @RequestBody @NotNull SearchEmailAddress search) throws EmailAddressException
+    public ResponseEntity<List<EmailAddressClient>> search(final @RequestBody @NotNull EmailAddressQuery search) throws EmailAddressException, QueryConditionException
     {
         EmailAddressValidationEngine.isSearchValid(search);
 
-        List<ClientEmailAddressEntity> clients = servicePerson.getEmailAddressService().search(search)
+        List<EmailAddressClient> clients = servicePerson.getEmailAddressService().search(search)
                 .stream()
                 .map(element -> converterEmailAddress.fromServerToClient(element))
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(clients);
     }
@@ -211,21 +230,21 @@ public class EmailAddressController
      * @return List of matching email address identifiers.
      * @throws EmailAddressException Thrown to indicate an error occurred while trying to query for email addresses.
      */
-    @ApiOperation(value = "Query email addresses", notes = "Returns a list of email addresses matching the given criteria.")
+    @Operation(summary = "Query email addresses", description = "Returns a list of email addresses matching the given criteria.")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successful query"),
-            @ApiResponse(code = 404, message = "No email address found matching the given criteria"),
-            @ApiResponse(code = 400, message = "Missing or invalid request"),
-            @ApiResponse(code = 500, message = "Internal server error")})
+            @ApiResponse(responseCode = "200", description = "Successful query"),
+            @ApiResponse(responseCode = "404", description = "No email address found matching the given criteria"),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid request"),
+            @ApiResponse(responseCode = "500", description = "Internal server error")})
     @GetMapping("/query")
-    public ResponseEntity<List<String>> query(final @NotNull SearchEmailAddress search) throws EmailAddressException
+    public ResponseEntity<List<String>> query(final @NotNull EmailAddressQuery search) throws EmailAddressException, QueryConditionException
     {
         EmailAddressValidationEngine.isSearchValid(search);
 
-        List<ClientEmailAddressEntity> clients = servicePerson.getEmailAddressService().search(search)
+        List<EmailAddressClient> clients = servicePerson.getEmailAddressService().search(search)
                 .stream()
                 .map(element -> converterEmailAddress.fromServerToClient(element))
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(GenericEntityConverter.toIdList(clients));
     }
